syntax = "proto3";
package proto;

message Message {
  int32 sender = 1;             // 发送消息用户id
  int32 receiver = 2;           // 发送给对端用户的id
  string content = 3;           // 文本消息内容
  string contentType = 4;       // 消息内容类型：1.文字 2.普通文件 3.图片 4.音频 5.视频 6.语音聊天 7.视频聊天
  string messageType = 5;       // 消息类型，1.单聊 2.群聊
  string sendAt = 6;        // 发送时间
  string status = 7;            // 消息状态（如已发送、已送达、已读）
  string attachment = 8;        // 附件（如果有）
}